# cmake_skeleton

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  createProject.sh
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  gitversion.cmake
src/: CMakeLists.txt  main.cpp  version.h.in
test/: CMakeLists.txt  tests.cpp
